@@ -449,6 +449,9 @@
 % \capstart for figures that actually have a caption.)
 \RequirePackage{hypcap}
 
+% Set up styles of URL: it should be placed after hyperref
+\urlstyle{same}
+
 % From docutils.writers.latex2e
 % inline markup (custom roles)
 % \DUrole{#1}{#2} tries \DUrole#1{#2}
