@@ -4,6 +4,7 @@ Release 1.4 alpha2 (in development)
 Incompatible changes
 --------------------
 * #2327: `latex_use_parts` is deprecated now. Use `latex_toplevel_sectioning` instead.
+* #2337: Use ``\url{URL}`` macro instead of ``\href{URL}{URL}`` in LaTeX writer.
 
 Features added
 --------------
